platform-services-v2/orchestration-services/airflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    app.kubernetes.io/name: airflow
    app.kubernetes.io/component: orchestration
    deployment.wave: "2"
    istio-injection: enabled
